--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,13 @@ body {
   padding: 5px;
   border: 1px solid;
 }
+
+/* .resume-preview-container {
+  all: initial;
+  font-family: "Times New Roman", sans-serif;
+  line-height: 1.6;
+  font-size: 16px;
+  padding: 20px;
+  max-width: 800px;
+  margin: 0 auto;
+} */
